--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "portage",
-    "short_name": "portage",
+    "name": "portage_backend",
+    "short_name": "portage_backend",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
